--- a/index.html
+++ b/index.html
@@ -10,24 +10,47 @@
 </head>
 
 <body>
-    <form id="login-form" class="hidden">
-        <input required maxlength="15" type="text" placeholder="What is your name?" />
-        <button>Login</button>
-    </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden" ></h1>
-    <form id="todo-form">
-        <input type="text" placeholder="Write a To Do and Press" />
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quote">
-        <span></span>
-        <span></span>
+    <div class="top">
+        <div></div>
+        <div id="weather">
+            <div>
+                <h1>Today's Weather!</h1>
+            </div>
+            <div>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
     </div>
-    <div id="weather">
-        <span></span>
-        <span></span>
+
+    <div class="center-above">
+        <h2 id="clock">00:00:00</h2>
     </div>
+
+    <div class="center">
+        <form id="login-form" class="hidden">
+            <input required maxlength="15" type="text" placeholder="What is your name?" />
+            <button>Login</button>
+        </form>
+        <h1 id="greeting" class="hidden"></h1>
+    </div>
+
+    <div class="bottom">
+        <form id="todo-form">
+            <input required type="text" placeholder="오늘의 할일을 엔터해보자!" />
+        </form>
+    </div>
+    <div class="bottom-mid">
+        <ul id="todo-list"></ul>
+    </div>
+
+    <div class="bottom-row">
+        <div id="quote">
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
